--- a/Class4TimeVarying.tex
+++ b/Class4TimeVarying.tex
@@ -561,7 +561,7 @@ $$P_o=P(\rho(h)<\xi)=P(|h|^2<\xi)=F_{|h|^2}(\xi)$$
 \end{definition} 
 \begin{itemize}
  \item We can set any BER threshold $\beta$ and evaluate $\xi=\mathscr{B}^{-1}(\beta)$ 
- \item Approximation $\overline{\mathscr{B}(\rho)}\approx\begin{cases}
+ \item Approximation $\mathscr{B}(\rho)\approx\begin{cases}
                                           0&\textnormal{ if }\rho>\xi\\
                                           1&\textnormal{ if }\rho\leq\xi\\
                                          \end{cases} \Rightarrow \overline{\mathscr{B}(\rho)}\approx P_o \approx \overline{\rho}^{-D}$
